# multi-provider-router

./: .env.example  .gitignore  CHANGELOG.md  CHARTER.md  CONTRIBUTING.md  DOCKSIDE-EXAM.md  Dockerfile  EXTRACTION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TEST_SUITE_SUMMARY.md  TEST_VALIDATION_CHECKLIST.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/workflows/: publish.yml  test.yml  validate.yml
config/: settings.py
docs/: DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md
examples/: basic_usage.py  cost_tracking.py  provider_selection.py  streaming_example.py
multi_provider_router/: __init__.py  main.py  models.py
multi_provider_router/providers/: __init__.py  base.py  claude_provider.py  deepinfra_provider.py  deepseek_provider.py  glm_provider.py  openai_provider.py
multi_provider_router/routing/: __init__.py  decision_engine.py  fallback_manager.py  load_balancer.py  router.py
multi_provider_router/utils/: __init__.py  cache.py  health_checker.py  logger.py  metrics.py  rate_limiter.py
tests/: README.md  __init__.py  conftest.py  test_cache.py  test_fallback.py  test_health.py  test_integration.py  test_metrics.py  test_providers.py  test_rate_limiter.py  test_routing.py
